@@ -10,12 +10,13 @@ SPVM::ShortList - Dynamic short array
   
   use ShortList;
   
+  # Create a short list
+  my $short_list = ShortList->new;
+  my $short_list = ShortList->new([(short)1, 2, 3]);
+  
   # Create a short list with array length
   my $short_list = ShortList->new_len(10);
 
-  # Create a short list with array
-  my $short_list = ShortList->new([(short)1, 2, 3]);
-  
   # Get list length
   my $length = $short_list->length;
   
@@ -54,17 +55,20 @@ L<ShortList|SPVM::ShortList> is dynamic  short array.
 
 =head2 new
 
-    static method new : ShortList ($array : short[])
+  static method new : ShortList ($array : short[]...)
 
 Create a new L<ShortList|SPVM::ShortList> object with specific C<short> array.
 
 Internally, new array is created, and each element of argument array is copied to internal array.
 
-If array is undef, 0-length internal array is created.
+If the array of the argument is C<undef>, 0-length internal array is created.
+
+  my $short_list = ShortList->new;
+  my $short_list = ShortList->new([(short)1, 2, 3]);
 
 =head2 new_len
 
-    static method new_len : ShortList ($length : int)
+  static method new_len : ShortList ($length : int)
 
 Create a new L<ShortList|SPVM::ShortList> object with array length.
 
